# Vigil

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  smoke_test.py  vigil-phase1.md  vigil-phase2.md  vigil-phase3.md  vigil-phase4.md  vigil-phase5.md  vigil_cli.py
audit/: logger.py  report.py
benchmarks/: README.md  advanced_benchmark.py  advanced_results.jsonl  cve_benchmark.py  results.jsonl
brief/: __init__.py  generator.py  schema.py
models/: context_entry.py  intent.py  verdict.py
prompts/: brief_generation.txt  tier1.txt  tier2.txt
server/: classifier.py  context.py  interceptor.py  main.py  tier1.py  tier2.py
src/: config.py  db.py  internal.py  payment.py  utils.py
tests/: check_block.py  test_e2e.py  test_models.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase6.py  test_phase7.py  test_phase8.py
tests/fixtures/: sample_brief.json  sample_intent_malformed.json  sample_intent_valid.json
